src/css/main.scss
/* ... */
// CFP
.cfp-cta {
	font-family: NunitoSansExtraBold, sans-serif;
	margin: 0 0 4px 0;

	a {
		color: #fdc33c;
	}
}

//default button style
.btn {
	@extend %btn;
	margin-bottom: $standard-margin;
}

.buttons {
	text-align: center;

	.schedule-btn {
		margin-left: 10px;
		margin-right: 10px;
		padding: 8px 10px 8px 10px;
		min-width: 180px;

		span {
			display: block;
		}

		.btn-title {
			font-size: 18px;
		}

		.btn-date {
			font-size: 16px;
			text-transform: none;
		}
	}
}

/* mailchimp embedded signup form styling */
.newsletter-signup {
	text-align: center;
	margin: 0 auto;
	max-width: 960px;

	// margin-bottom: 40px;
	.header {
		display: block;
		font-size: 24px;
		font-family: NunitoSansBold, sans-serif;
		color: $brand-body;
		margin-top: 0;
		margin-bottom: $standard-margin;
	}

	//these two classes apparently do something in the mailchimp code snippet, but lets make them work with our layout
	.mc-field-group,
	.clear {
		@include mq(xs) {
			display: block;
		}

		@include mq(sm) {
			display: inline-block;
		}
	}

	input[type=email] {
		background-color: $brand-white;
		border: 1px solid $brand-body;
		padding: $quarter-margin $half-margin;
		margin-right: 10px;
		font-size: $body-size;

		@include mq(xs) {
			width: 80%;
			margin-bottom: $standard-margin;
		}

		@include mq(sm) {
			width: 350px;
		}

		@include mq(md) {
			width: 470px;
		}
	}

	input[type=submit] {
		@extend %btn;
		font-size: $body-size;
	}

	#mce-error-response,
	#mce-success-response {
		margin-top: $standard-margin;
		margin-bottom: $standard-margin;
	}
}

.section.home-videos {
	margin-top: 18px;
}

.home-videos {
	.video-responsive {
		overflow: hidden;
		padding-bottom: 56.25%;
		position: relative;
		height: 0;
		margin-bottom: 35px !important;
	}

	.video-responsive iframe {
		left: 0;
		top: 0;
		height: 100%;
		width: 100%;
		position: absolute;
	}
}

.homepage-video {
	max-width: 885px;
}

.content-video {
	max-width: 640px;
}

.homepage-youtube-link-img {
	margin-bottom: $standard-margin;
}

/* sponsor subfooter section on homepage and second level pages */

.sponsor-section {
	background-color: #fff;
	padding: 0 0 $standard-margin 0;
	text-align: center;

	h3 {
		text-transform: uppercase;
		color: $brand-blue;
		margin-bottom: $half-margin;
	}

	img {
		@include mq(xs) {
			display: block;
			margin: $standard-margin auto $half-margin auto;
		}

		@include mq(sm) {
			margin: $half-margin;
		}

		@include mq(md) {
			display: inline-block;
		}
	}

	/*.virtual-genius {
		@include mq(xs) { height: 10 }
		@include mq(sm) { height: 10px }
		@include mq(md) {}
		@include mq(lg) {}
	}*/
}


.about.hero {
	background-image: url('../img/hero-standard-placeholder.jpg');
}

.cfp.hero {
	background-image: url('../img/hero-cfp.jpg');
}

.workshops.hero {
	background-image: url('../img/hero-workshops.jpg');
}

.sponsors.hero {
	background-image: url('../img/hero-sponsors.jpg');
}

.faq.hero {
	background-image: url('../img/hero-standard-placeholder.jpg');
}

//venue specific styles

.venue.hero {
	background-image: url('../img/hero-standard-placeholder.jpg');
}

.venue--address--reserve-btn-row,
.get-ticket-btn {
	text-align: center;

	.btn {
		display: inline-block;
	}
}

//scholarship specific styles
.scholarship.hero {
	background-image: url('../img/scholarship-hero.jpg');
	background-size: cover;
	background-position: bottom center;
	height: 400px;

	@include mq(md) {
		background-position: center center;
	}
}

//blockquote styling

blockquote {
	background: #f9f9f9;
	border-left: 10px solid $brand-blue;
	padding: 15px;
	quotes: "\201C" "\201D" "\2018" "\2019";
	text-align: left;
}

blockquote:before {
	color: $brand-blue;
	content: open-quote;
	font-size: 4em;
	line-height: 0.1em;
	margin-right: 0.25em;
	vertical-align: -0.4em;
}

blockquote p:first-child:after {
	color: $brand-blue;
	content: close-quote;
	display: block;
	font-size: 4em;
	line-height: 0.1em;
	margin-top: 0.6em;
}

blockquote p:first-child {
	margin-bottom: 0;
}

blockquote p {
	display: inline;
}

blockquote .quote-source {
	font-size: .75em;
}

//make talk session titles same colour as h2 workshop titles that are also links
.gold {
	color: $brand-body-link !important;
}

.styleguide--label {
	border-bottom: 1px solid #cdcdcd;
}

// jessitron adds some cards, since we don't have Bootstrap 4+
.set-of-cards-for-intro-text {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	margin: 0 auto;
}

.set-of-cards-for-intro-text .card {
	background-color: #0082c8;
	background-color: rgba(0, 130, 200, 0.4);
	border-radius: 5px;
	/* box-shadow: 0 2px 4px rgba(0,0,0,0.1); */
	margin: 10px;
	padding: 20px;
	text-align: center;
	align-items: center;
}

.card.smallish {
	width: 350px;
	background-color: rgba(0, 130, 200, 0.1);
}

// Pricing section
.pricing {
	max-width: 885px;
	margin: 0 auto;
	padding-top: $standard-margin;
	padding-bottom: $standard-margin;

	h2 {
		font-size: $big;
	}
}

.pricing-subtitle {
	font-family: NunitoSans, sans-serif;
	font-size: 16px;
	margin-bottom: $standard-margin;
}

.pricing-tables {
	margin-bottom: $standard-margin;
}

.pricing-table-block {
	margin-bottom: $standard-margin * 1.5;

	&.group-table-block {
		.pricing-table-title {
			color: $brand-yellow;
		}
	}
}

.pricing-table-title {
	font-family: NunitoSansBold, sans-serif;
	font-size: 20px;
	color: $brand-blue;
	text-transform: uppercase;
	margin: 0 0 4px 0;

	.pricing-table-dates {
		font-family: NunitoSans, sans-serif;
		font-size: 14px;
		text-transform: none;
		color: #666;
		display: inline;
		margin-left: 8px;
	}

	@include mq(xs) {
		text-align: center;
		font-size: $body-size;

		.pricing-table-dates {
			display: block;
			margin-left: 0;
			margin-top: 4px;
		}
	}
}

.pricing-table-description {
	font-family: NunitoSans, sans-serif;
	font-size: 15px;
	color: #666;
	margin-bottom: $half-margin;

	@include mq(xs) {
		text-align: center;
	}
}
/* ... */

